crates/test-files/fixtures/compile_errors/invalid_var_declaration_2.fe
contract Foo:
  pub fn bar():
    (x, y):(u256,)=(1,)
